--- a/doc/agile/v1/sprint_backlog_15.org
+++ b/doc/agile/v1/sprint_backlog_15.org
@@ -13,22 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-09 Tue 16:18]
+#+CAPTION: Clock summary at [2019-04-09 Tue 16:56]
 | <75>                                                   |         |       |      |       |
 | Headline                                               | Time    |       |      |     % |
 |--------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                           | *11:32* |       |      | 100.0 |
+| *Total time*                                           | *12:09* |       |      | 100.0 |
 |--------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                | 11:32   |       |      | 100.0 |
-| Active                                                 |         | 11:32 |      | 100.0 |
-| Edit release notes for previous sprint                 |         |       | 4:21 |  37.7 |
-| Sprint and product backlog grooming                    |         |       | 1:32 |  13.3 |
-| Create a video demo for the previous sprint's features |         |       | 1:35 |  13.7 |
-| Fix issues with emacs                                  |         |       | 2:01 |  17.5 |
-| Fix issues with nightly build                          |         |       | 0:08 |   1.2 |
-| Add diffing support to string asserter                 |         |       | 0:23 |   3.3 |
-| Reactivate the boilerplate tests                       |         |       | 0:46 |   6.6 |
-| Fix snags with emacs                                   |         |       | 0:46 |   6.6 |
+| Stories                                                | 12:09   |       |      | 100.0 |
+| Active                                                 |         | 12:09 |      | 100.0 |
+| Edit release notes for previous sprint                 |         |       | 4:21 |  35.8 |
+| Sprint and product backlog grooming                    |         |       | 1:32 |  12.6 |
+| Create a video demo for the previous sprint's features |         |       | 1:35 |  13.0 |
+| Fix issues with emacs                                  |         |       | 2:01 |  16.6 |
+| Fix issues with nightly build                          |         |       | 0:08 |   1.1 |
+| Add diffing support to string asserter                 |         |       | 1:00 |   8.2 |
+| Reactivate the boilerplate tests                       |         |       | 0:46 |   6.3 |
+| Fix snags with emacs                                   |         |       | 0:46 |   6.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -255,7 +255,10 @@ Things the marker can/should have:
 
 *** COMPLETED Add diffing support to string asserter                  :story:
     CLOSED: [2019-04-09 Tue 16:18]
+    :LOGBOOK:
+    CLOCK: [2019-04-09 Tue 16:19]--[2019-04-09 Tue 16:56] =>  0:37
     CLOCK: [2019-04-09 Tue 15:55]--[2019-04-09 Tue 16:18] =>  0:23
+    :END:
 
 It would be nice to have a unified diff coming out of the asserter. At
 present we are dumping the actual and expected and then having to
