--- a/doc/agile/v1/sprint_backlog_15.org
+++ b/doc/agile/v1/sprint_backlog_15.org
@@ -13,22 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-09 Tue 16:56]
+#+CAPTION: Clock summary at [2019-04-09 Tue 17:47]
 | <75>                                                   |         |       |      |       |
 | Headline                                               | Time    |       |      |     % |
 |--------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                           | *12:09* |       |      | 100.0 |
+| *Total time*                                           | *12:59* |       |      | 100.0 |
 |--------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                | 12:09   |       |      | 100.0 |
-| Active                                                 |         | 12:09 |      | 100.0 |
-| Edit release notes for previous sprint                 |         |       | 4:21 |  35.8 |
-| Sprint and product backlog grooming                    |         |       | 1:32 |  12.6 |
-| Create a video demo for the previous sprint's features |         |       | 1:35 |  13.0 |
-| Fix issues with emacs                                  |         |       | 2:01 |  16.6 |
-| Fix issues with nightly build                          |         |       | 0:08 |   1.1 |
-| Add diffing support to string asserter                 |         |       | 1:00 |   8.2 |
-| Reactivate the boilerplate tests                       |         |       | 0:46 |   6.3 |
-| Fix snags with emacs                                   |         |       | 0:46 |   6.3 |
+| Stories                                                | 12:59   |       |      | 100.0 |
+| Active                                                 |         | 12:59 |      | 100.0 |
+| Edit release notes for previous sprint                 |         |       | 4:21 |  33.5 |
+| Sprint and product backlog grooming                    |         |       | 1:32 |  11.8 |
+| Create a video demo for the previous sprint's features |         |       | 1:35 |  12.2 |
+| Fix issues with emacs                                  |         |       | 2:01 |  15.5 |
+| Fix issues with nightly build                          |         |       | 0:08 |   1.0 |
+| Add diffing support to string asserter                 |         |       | 1:00 |   7.7 |
+| Reactivate the boilerplate tests                       |         |       | 1:36 |  12.3 |
+| Fix snags with emacs                                   |         |       | 0:46 |   5.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -272,6 +272,7 @@ Tasks:
 
 *** STARTED Reactivate the boilerplate tests                          :story:
     :LOGBOOK:
+    CLOCK: [2019-04-09 Tue 16:57]--[2019-04-09 Tue 17:47] =>  0:50
     CLOCK: [2019-04-09 Tue 11:42]--[2019-04-09 Tue 12:06] =>  0:24
     CLOCK: [2019-04-09 Tue 11:06]--[2019-04-09 Tue 11:25] =>  0:19
     CLOCK: [2019-04-09 Tue 10:30]--[2019-04-09 Tue 10:33] =>  0:03
