--- a/doc/agile/v1/sprint_backlog_15.org
+++ b/doc/agile/v1/sprint_backlog_15.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-10 Wed 14:41]
+#+CAPTION: Clock summary at [2019-04-10 Wed 16:49]
 | <75>                                                   |         |       |      |       |
 | Headline                                               | Time    |       |      |     % |
 |--------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                           | *20:56* |       |      | 100.0 |
+| *Total time*                                           | *22:52* |       |      | 100.0 |
 |--------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                | 20:56   |       |      | 100.0 |
-| Active                                                 |         | 20:56 |      | 100.0 |
-| Edit release notes for previous sprint                 |         |       | 4:21 |  20.8 |
-| Sprint and product backlog grooming                    |         |       | 1:42 |   8.1 |
-| Create a video demo for the previous sprint's features |         |       | 1:35 |   7.6 |
-| Fix issues with emacs                                  |         |       | 2:01 |   9.6 |
+| Stories                                                | 22:52   |       |      | 100.0 |
+| Active                                                 |         | 22:52 |      | 100.0 |
+| Edit release notes for previous sprint                 |         |       | 4:21 |  19.0 |
+| Sprint and product backlog grooming                    |         |       | 1:42 |   7.4 |
+| Create a video demo for the previous sprint's features |         |       | 1:35 |   6.9 |
+| Fix issues with emacs                                  |         |       | 2:01 |   8.8 |
 | Fix issues with nightly build                          |         |       | 0:08 |   0.6 |
-| Add diffing support to string asserter                 |         |       | 1:00 |   4.8 |
-| C# generation is borked                                |         |       | 4:12 |  20.1 |
-| Fix snags with emacs                                   |         |       | 1:55 |   9.2 |
-| Reactivate the boilerplate tests                       |         |       | 4:02 |  19.3 |
+| Add diffing support to string asserter                 |         |       | 1:00 |   4.4 |
+| C# generation is borked                                |         |       | 4:12 |  18.4 |
+| Reactivate the boilerplate tests                       |         |       | 5:58 |  26.1 |
+| Fix snags with emacs                                   |         |       | 1:55 |   8.4 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -283,6 +283,22 @@ We do not seem to be detecting diffs in C#. The problem is that we are
 not using the element artefact properties to determine the overwrite
 flag. We neeed to copy the logic from c++ assistant.
 
+*** COMPLETED Reactivate the boilerplate tests                        :story:
+    CLOSED: [2019-04-10 Wed 16:49]
+    :LOGBOOK:
+    CLOCK: [2019-04-10 Wed 16:14]--[2019-04-10 Wed 16:49] =>  0:35
+    CLOCK: [2019-04-10 Wed 14:42]--[2019-04-10 Wed 16:03] =>  1:21
+    CLOCK: [2019-04-10 Wed 14:11]--[2019-04-10 Wed 14:41] =>  0:30
+    CLOCK: [2019-04-09 Tue 19:00]--[2019-04-09 Tue 19:45] =>  0:45
+    CLOCK: [2019-04-09 Tue 17:48]--[2019-04-09 Tue 18:59] =>  1:11
+    CLOCK: [2019-04-09 Tue 16:57]--[2019-04-09 Tue 17:47] =>  0:50
+    CLOCK: [2019-04-09 Tue 11:42]--[2019-04-09 Tue 12:06] =>  0:24
+    CLOCK: [2019-04-09 Tue 11:06]--[2019-04-09 Tue 11:25] =>  0:19
+    CLOCK: [2019-04-09 Tue 10:30]--[2019-04-09 Tue 10:33] =>  0:03
+    :END:
+
+Split these out into decoration tests and boilerplate tests.
+
 *** STARTED Fix snags with emacs                                      :story:
     :LOGBOOK:
     CLOCK: [2019-04-10 Wed 13:27]--[2019-04-10 Wed 14:11] =>  0:44
@@ -301,19 +317,6 @@ Notes:
   quite a few times, grinding emacs to a halt. Investigate moving to
   clangd.
 - experiments with minimap.
-
-*** STARTED Reactivate the boilerplate tests                          :story:
-    :LOGBOOK:
-    CLOCK: [2019-04-10 Wed 14:11]--[2019-04-10 Wed 14:41] =>  0:30
-    CLOCK: [2019-04-09 Tue 19:00]--[2019-04-09 Tue 19:45] =>  0:45
-    CLOCK: [2019-04-09 Tue 17:48]--[2019-04-09 Tue 18:59] =>  1:11
-    CLOCK: [2019-04-09 Tue 16:57]--[2019-04-09 Tue 17:47] =>  0:50
-    CLOCK: [2019-04-09 Tue 11:42]--[2019-04-09 Tue 12:06] =>  0:24
-    CLOCK: [2019-04-09 Tue 11:06]--[2019-04-09 Tue 11:25] =>  0:19
-    CLOCK: [2019-04-09 Tue 10:30]--[2019-04-09 Tue 10:33] =>  0:03
-    :END:
-
-Split these out into decoration tests and boilerplate tests.
 
 *** Location of =--byproduct-directory= not respected                 :story:
 
