--- a/doc/agile/v1/sprint_backlog_15.org
+++ b/doc/agile/v1/sprint_backlog_15.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-10 Wed 16:49]
+#+CAPTION: Clock summary at [2019-04-10 Wed 17:03]
 | <75>                                                   |         |       |      |       |
 | Headline                                               | Time    |       |      |     % |
 |--------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                           | *22:52* |       |      | 100.0 |
+| *Total time*                                           | *23:04* |       |      | 100.0 |
 |--------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                | 22:52   |       |      | 100.0 |
-| Active                                                 |         | 22:52 |      | 100.0 |
-| Edit release notes for previous sprint                 |         |       | 4:21 |  19.0 |
-| Sprint and product backlog grooming                    |         |       | 1:42 |   7.4 |
+| Stories                                                | 23:04   |       |      | 100.0 |
+| Active                                                 |         | 23:04 |      | 100.0 |
+| Edit release notes for previous sprint                 |         |       | 4:21 |  18.9 |
+| Sprint and product backlog grooming                    |         |       | 1:54 |   8.2 |
 | Create a video demo for the previous sprint's features |         |       | 1:35 |   6.9 |
-| Fix issues with emacs                                  |         |       | 2:01 |   8.8 |
+| Fix issues with emacs                                  |         |       | 2:01 |   8.7 |
 | Fix issues with nightly build                          |         |       | 0:08 |   0.6 |
-| Add diffing support to string asserter                 |         |       | 1:00 |   4.4 |
-| C# generation is borked                                |         |       | 4:12 |  18.4 |
-| Reactivate the boilerplate tests                       |         |       | 5:58 |  26.1 |
-| Fix snags with emacs                                   |         |       | 1:55 |   8.4 |
+| Add diffing support to string asserter                 |         |       | 1:00 |   4.3 |
+| C# generation is borked                                |         |       | 4:12 |  18.2 |
+| Reactivate the boilerplate tests                       |         |       | 5:58 |  25.9 |
+| Fix snags with emacs                                   |         |       | 1:55 |   8.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -190,6 +190,7 @@ Happy Modeling!
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-04-10 Wed 16:50]--[2019-04-10 Wed 17:02] =>  0:12
     CLOCK: [2019-04-10 Wed 11:55]--[2019-04-10 Wed 12:05] =>  0:10
     CLOCK: [2019-04-09 Tue 10:13]--[2019-04-09 Tue 10:29] =>  0:16
     CLOCK: [2019-04-09 Tue 09:55]--[2019-04-09 Tue 10:12] =>  0:17
